--- a/view/risk_management_view.xml
+++ b/view/risk_management_view.xml
@@ -30,63 +30,84 @@
 			<field name="model">risk.management.risk</field>
 			<field name="priority">5</field>
 			<field name="arch" type="xml">
-				<form string='Risk' version="7.0">
+				<form string="Risk" version="7.0">
                     <header>
                         <button name="set_state_draft" type="object" states="active,closed" string="Set Draft" icon="gtk-execute"/>
                         <button name="set_state_closed" type="object" states="active" string="Close Risk" icon="gtk-cancel"/>
                         <button name="set_state_active" type="object" states="draft" string="Set Active" icon="gtk-apply"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,active,closed"/>
                     </header>
-                    <sheet string="Risk Detail">
-				        <group col="6" colspan="4">
-				 	        <group colspan="5" col="6">
-						        <field name="name"/>
-						        <field name="description"/>
+                    <sheet string="Risk">
+                        <label for="description" class="oe_edit_only"/>
+                        <h1><field name="description"/></h1>
+                        <label for="name" class="oe_edit_only"/>
+                        <field name="name"/>
+				 	    <group>
+                            <group>
 						        <field name="project_id"/>
 						        <field name="author_id"/>
 						        <field name="date_registered" readonly="1"/>
-						        <field name="date_modified"/>
-						        <field name="risk_category_id"/>
-                	        </group>
-				        </group>
-                        <group colspan="1" col="2">
-                            <field name="proximity_id"/>
+                            </group>
+                            <group>
+                                <field name="proximity_id"/>
+                                <field name="risk_category_id"/>
+                                <field name="date_modified"/>
+                            </group>
                         </group>
-			            <notebook colspan="4">
+			            <notebook>
    	            	        <page string="Description">
+                                <group>
                 		        <field name="description_event"/>
                 		        <field name="description_cause"/>
 						        <field name="description_effect"/>
+                                </group>
                             </page>
                             <page string="Risk Response">
-                                <group col="6" colspan="3">
-                                    <field name="risk_response_category_id"/>
-                                    <field name="risk_owner_id"/>
+                                <group>
+                                    <group>
+                                        <field name="risk_response_category_id"/>
+                                    </group>
+                                    <group>
+                                        <field name="risk_owner_id"/>
+                                    </group>
                                 </group>
-                                <group col="6" colspan="6">
+
                                     <field name="risk_response_ids" string="Response Actions" context="{'user_invisible': True, 'default_project_id':project_id}"/>
-                                </group>
+
                             </page>
                             <page string="Risk Score">
-   	            	            <group col="6" colspan="4">
-   	            			        <group col="4" colspan="5">
+   	            	            <group>
+   	            			        <group>
                     			        <field name="impact_inherent"/>
 								        <field name="probability_inherent"/>
-								        <field name="impact_residual"/>
-								        <field name="probability_residual"/>
+
 							        </group>
-		             		        <group col="2" colspan="1">
-								        <field name="expected_value_inherent" readonly="1" string="Inherent Risk Score"/>
-								        <field name="expected_value_residual" readonly="1" string="Residual Risk Score"/>
+                                    <group>
+                                        <div>
+                                            <label for="expected_value_inherent"/>
+                                            <h2><field name="expected_value_inherent" readonly="1" string="Inherent Risk Score"/></h2>
+                                        </div>
+                                    </group>
+		             		        <group>
+                                        <field name="impact_residual"/>
+                                        <field name="probability_residual"/>
 							        </group>
+                                    <group>
+                                        <div>
+                                            <label for="expected_value_residual"/>
+                                            <h2><field name="expected_value_residual" readonly="1" string="Residual Risk Score"/></h2>
+                                        </div>
+                                    </group>
 					            </group>
+
                             </page>
                         </notebook>
-                    </sheet>
+                     </sheet>
                     <div class="oe_chatter">
                         <field name="message_follower_ids" widget="mail_followers" groups="base.group_user"/>
                         <field name="message_ids" widget="mail_thread"/>
                     </div>
+
 
                 </form>
 			</field>
@@ -98,7 +119,7 @@
             <field name="model">risk.management.risk</field>
             <field name="arch" type="xml">
                <search string="Risk Edition">
-                    <group col="20" colspan="4">
+
                         <filter string="Active" domain="[('state','=','active')]" help="Active risks" name="active" icon="gtk-execute"/>
                         <separator orientation="vertical"/>
                         <filter string="No Actions" domain="[('risk_response_ids','=',False)]"  help="Risks without actions"  name="no_actions" icon="terp-check"/>                   
@@ -114,7 +135,7 @@
                         <field name="risk_owner_id" select="1" string="Risk Owner">
                             <filter domain="[('risk_owner_id','=',False)]"  help="Risks without ownership" icon="terp-personal-" separator="1"/>
                         </field>                         
-                    </group>                  
+
                      <newline/>
                     <group expand="0" string="Group By..." colspan="4" col="20"> 	                   
                         <filter string="Project" name="group_project_id" icon="terp-folder-violet" domain="[]" context="{'group_by':'project_id'}"/>
@@ -143,15 +164,80 @@
 				</graph>
 			</field>
 		</record>
-	
-				
-<!-- ACTIONS  -->
+
+        <record id="risk_kanban_view" model="ir.ui.view">
+            <field name="name">risk.management.risk.kanban.view</field>
+            <field name="model">risk.management.risk</field>
+            <field name="arch"  type="xml">
+                <kanban version="7.0" class="oe_background_grey" default_group_by="state">
+                <field name="name"/>
+                <field name="description"/>
+                <field name="project_id"/>
+                <field name="risk_category_id"/>
+                <field name="expected_value_inherent"/>
+                <field name="expected_value_residual"/>
+                <field name="risk_response_category_id"/>
+                <field name="risk_response_ids"/>
+                <field name="risk_owner_id"/>
+                <field name="color"/>
+                <field name="message_summary"/>
+                <templates>
+                    <t t-name="kanban-box">
+                    <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click">
+                            <div class="oe_dropdown_toggle oe_dropdown_kanban">
+                                <span class="oe_e">í</span>
+                                <ul class="oe_dropdown_menu">
+                                    <t t-if="widget.view.is_action_enabled('edit')"><li><a type="edit">Edit...</a></li></t>
+                                    <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
+                                </ul>
+                            </div>
+                            <div class="oe_kanban_content">
+                                <div>
+                                   <li> <b><field name="description"/></b> </li>
+                                   <li> <field name="name"/>  </li>
+                                   <li> <field name="risk_category_id"/>  </li>
+                                </div>
+                                <div>
+                                    <field name="project_id"/>
+                                </div>
+                                <div style="padding-left: 0.5em">
+                                   <li>
+                                       <field name="expected_value_inherent"/>
+                                       <label>(Inherent)</label>
+
+
+                                       <field string="Residual Score:" name="expected_value_residual"/>
+                                       <label>(Residual)</label>
+                                   </li>
+                                   <li>
+                                       <label>Actions:</label>
+                                       <t t-esc="record.risk_response_ids.count"/>
+
+                                   </li>
+                                </div>
+                                <div class="oe_kanban_bottom_right">
+                                    <img t-att-src="kanban_image('res.users', 'image_small', record.risk_owner_id.raw_value)" t-att-title="record.risk_owner_id.value" width="24" height="24" class="oe_kanban_avatar" t-if="record.risk_owner_id.value"/>
+                                </div>
+                                <div class="oe_kanban_footer_left">
+                                    <t t-raw="record.message_summary.raw_value"/>
+                                </div>
+                            </div>
+                            <div class="oe_clear"></div>
+                     </div>
+                    </t>
+                </templates>
+                </kanban>
+            </field>
+        </record>
+
+
+        <!-- ACTIONS  -->
 		<record model="ir.actions.act_window" id="action_show_risks">
 			<field name="name">Risks</field>
 			<field name="type">ir.actions.act_window</field>
 			<field name="res_model">risk.management.risk</field>
 			<field name="view_type">form</field>
-			<field name="view_mode">tree,form,graph</field>
+			<field name="view_mode">kanban,tree,form,graph</field>
 			<field name="view_id" ref="risk_tree_view"/>
 			<field name="search_view_id" ref="risk_search_form_view"/>
 			<field name="context">{"search_default_risk_owner_id": uid}</field>
