--- a/view/risk_management_view.xml
+++ b/view/risk_management_view.xml
@@ -224,5 +224,15 @@
 			<field name="search_view_id" ref="risk_search_form_view"/>
 			<field name="context">{"search_default_risk_owner_id": uid}</field>
 		</record>
+
+        <record model="ir.actions.act_window" id="action_show_actions">
+            <field name="name">Tasks on Risks</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">project.task</field>
+            <field name="view_type">tree</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="search_view_id" ref="risk_management_project_task_search_view"/>
+            <field name="domain">[('risk_id','!=',False)]</field>
+        </record>
 	</data>
 </openerp>
